// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customReports customReports_getItem 1`] = `
Object {
  "data": Object {
    "some": Object {
      "custom": "data",
    },
  },
  "id": "top-20-biggest-modules",
  "name": "Top 20 biggest modules",
  "view": Array [
    "struct",
    Object {
      "data": "#.stats.compilations.(
            $compilation: $;
            modules.({
              module: $,
              hash: $compilation.hash,
              size: getModuleSize($compilation.hash)
            })
          ).sort(size.size desc)[:20]",
      "item": "module-item",
      "view": "list",
    },
  ],
}
`;

exports[`customReports customReports_getItems 1`] = `
Array [
  Object {
    "data": Object {
      "some": Object {
        "custom": "data",
      },
    },
    "id": "top-20-biggest-modules",
    "name": "Top 20 biggest modules",
    "view": Array [
      "struct",
      Object {
        "data": "#.stats.compilations.(
            $compilation: $;
            modules.({
              module: $,
              hash: $compilation.hash,
              size: getModuleSize($compilation.hash)
            })
          ).sort(size.size desc)[:20]",
        "item": "module-item",
        "view": "list",
      },
    ],
  },
  Object {
    "data": Object {
      "some": Object {
        "custom": "data",
      },
    },
    "id": "top-20-biggest-modules",
    "name": "Top 20 biggest modules",
    "view": Array [
      "struct",
      Object {
        "data": "#.stats.compilations.(
            $compilation: $;
            modules.({
              module: $,
              hash: $compilation.hash,
              size: getModuleSize($compilation.hash)
            })
          ).sort(size.size desc)[:20]",
        "item": "module-item",
        "view": "list",
      },
    ],
  },
]
`;

exports[`customReports customReports_getItems 2`] = `
Array [
  Object {
    "data": Object {
      "some": Object {
        "custom": "data",
      },
    },
    "id": "top-20-biggest-modules",
    "name": "Top 20 biggest modules",
    "view": Array [
      "struct",
      Object {
        "data": "#.stats.compilations.(
            $compilation: $;
            modules.({
              module: $,
              hash: $compilation.hash,
              size: getModuleSize($compilation.hash)
            })
          ).sort(size.size desc)[:20]",
        "item": "module-item",
        "view": "list",
      },
    ],
  },
]
`;

exports[`customReports customReports_getItems 3`] = `
Array [
  Object {
    "data": Object {
      "some": Object {
        "custom": "data",
      },
    },
    "id": "top-20-biggest-modules",
    "name": "Top 20 biggest modules",
    "view": Array [
      "struct",
      Object {
        "data": "#.stats.compilations.(
            $compilation: $;
            modules.({
              module: $,
              hash: $compilation.hash,
              size: getModuleSize($compilation.hash)
            })
          ).sort(size.size desc)[:20]",
        "item": "module-item",
        "view": "list",
      },
    ],
  },
]
`;

exports[`moduleGraph_getPaths 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "node": Object {
        "id": "./node_modules/is-array/index.js",
      },
    },
  ],
  "node": Object {
    "id": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts|0b0c5dd45d404db9de8e4f112da38650",
  },
}
`;

exports[`modulesToFoamTree 1`] = `
Object {
  "groups": Array [
    Object {
      "groups": Array [
        Object {
          "groups": Array [
            Object {
              "groups": Array [],
              "label": "index.ts",
              "link": Object {
                "id": "292",
                "page": "module",
              },
              "path": "simple/src/index.ts",
              "weight": 226,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "sub-module.ts",
              "link": Object {
                "id": "./node_modules/babel-loader/lib/index.js!./simple/src/sub-module.ts",
                "page": "module",
              },
              "path": "simple/src/sub-module.ts",
              "weight": 190,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "index2.ts",
              "link": Object {
                "id": "503",
                "page": "module",
              },
              "path": "simple/src/index2.ts",
              "weight": 552,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "index2.css",
              "link": Object {
                "id": "945",
                "page": "module",
              },
              "path": "simple/src/index2.css",
              "weight": 644,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "test.txt",
              "link": Object {
                "id": "47",
                "page": "module",
              },
              "path": "simple/src/test.txt",
              "weight": 42,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "dyn.ts",
              "link": Object {
                "id": "848",
                "page": "module",
              },
              "path": "simple/src/dyn.ts",
              "weight": 21,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "statoscope.png",
              "link": Object {
                "id": "523",
                "page": "module",
              },
              "path": "simple/src/statoscope.png",
              "weight": 8311.84,
              "weightCompressor": undefined,
            },
          ],
          "label": "src",
          "link": undefined,
          "path": "simple/src",
          "weight": 9986.84,
          "weightCompressor": undefined,
        },
        Object {
          "groups": Array [
            Object {
              "groups": Array [
                Object {
                  "groups": Array [],
                  "label": "index.js",
                  "link": Object {
                    "id": "./simple/node_modules/foo/index.js",
                    "page": "module",
                  },
                  "path": "simple/node_modules/foo/index.js",
                  "weight": 96,
                  "weightCompressor": undefined,
                },
                Object {
                  "groups": Array [
                    Object {
                      "groups": Array [
                        Object {
                          "groups": Array [],
                          "label": "index.js",
                          "link": Object {
                            "id": "./simple/node_modules/foo/node_modules/bar/index.js",
                            "page": "module",
                          },
                          "path": "simple/node_modules/foo/node_modules/bar/index.js",
                          "weight": 25,
                          "weightCompressor": undefined,
                        },
                      ],
                      "label": "bar",
                      "link": Object {
                        "id": "bar",
                        "package": Object {
                          "instance": Object {
                            "path": "simple/node_modules/foo/node_modules/bar",
                          },
                          "name": "bar",
                        },
                        "page": "package",
                        "params": Object {
                          "instance": "simple/node_modules/foo/node_modules/bar",
                        },
                      },
                      "path": "simple/node_modules/foo/node_modules/bar",
                      "weight": 25,
                      "weightCompressor": undefined,
                    },
                  ],
                  "label": "node_modules",
                  "link": undefined,
                  "path": "simple/node_modules/foo/node_modules",
                  "weight": 25,
                  "weightCompressor": undefined,
                },
              ],
              "label": "foo",
              "link": Object {
                "id": "foo",
                "package": Object {
                  "instance": Object {
                    "path": "simple/node_modules/foo",
                  },
                  "name": "foo",
                },
                "page": "package",
                "params": Object {
                  "instance": "simple/node_modules/foo",
                },
              },
              "path": "simple/node_modules/foo",
              "weight": 121,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [
                Object {
                  "groups": Array [],
                  "label": "index.js",
                  "link": Object {
                    "id": "./simple/node_modules/bar/index.js",
                    "page": "module",
                  },
                  "path": "simple/node_modules/bar/index.js",
                  "weight": 50,
                  "weightCompressor": undefined,
                },
              ],
              "label": "bar",
              "link": Object {
                "id": "bar",
                "package": Object {
                  "instance": Object {
                    "path": "simple/node_modules/bar",
                  },
                  "name": "bar",
                },
                "page": "package",
                "params": Object {
                  "instance": "simple/node_modules/bar",
                },
              },
              "path": "simple/node_modules/bar",
              "weight": 50,
              "weightCompressor": undefined,
            },
          ],
          "label": "node_modules",
          "link": undefined,
          "path": "simple/node_modules",
          "weight": 171,
          "weightCompressor": undefined,
        },
      ],
      "label": "simple",
      "link": undefined,
      "path": "simple",
      "weight": 10157.84,
      "weightCompressor": undefined,
    },
    Object {
      "groups": Array [],
      "label": "external \\"extLib\\"",
      "link": Object {
        "id": "external var \\"extLib\\"",
        "page": "module",
      },
      "path": "external \\"extLib\\"",
      "weight": 84,
      "weightCompressor": undefined,
    },
    Object {
      "groups": Array [
        Object {
          "groups": Array [
            Object {
              "groups": Array [],
              "label": "index.js",
              "link": Object {
                "id": "929",
                "page": "module",
              },
              "path": "node_modules/is-array/index.js",
              "weight": 470,
              "weightCompressor": undefined,
            },
          ],
          "label": "is-array",
          "link": Object {
            "id": "is-array",
            "package": Object {
              "instance": Object {
                "path": "node_modules/is-array",
              },
              "name": "is-array",
            },
            "page": "package",
            "params": Object {
              "instance": "node_modules/is-array",
            },
          },
          "path": "node_modules/is-array",
          "weight": 470,
          "weightCompressor": undefined,
        },
        Object {
          "groups": Array [
            Object {
              "groups": Array [
                Object {
                  "groups": Array [
                    Object {
                      "groups": Array [],
                      "label": "api.js",
                      "link": Object {
                        "id": "476",
                        "page": "module",
                      },
                      "path": "node_modules/css-loader/dist/runtime/api.js",
                      "weight": 1605,
                      "weightCompressor": undefined,
                    },
                    Object {
                      "groups": Array [],
                      "label": "getUrl.js",
                      "link": Object {
                        "id": "678",
                        "page": "module",
                      },
                      "path": "node_modules/css-loader/dist/runtime/getUrl.js",
                      "weight": 830,
                      "weightCompressor": undefined,
                    },
                  ],
                  "label": "runtime",
                  "link": undefined,
                  "path": "node_modules/css-loader/dist/runtime",
                  "weight": 2435,
                  "weightCompressor": undefined,
                },
              ],
              "label": "dist",
              "link": undefined,
              "path": "node_modules/css-loader/dist",
              "weight": 2435,
              "weightCompressor": undefined,
            },
          ],
          "label": "css-loader",
          "link": Object {
            "id": "css-loader",
            "package": Object {
              "instance": Object {
                "path": "node_modules/css-loader",
              },
              "name": "css-loader",
            },
            "page": "package",
            "params": Object {
              "instance": "node_modules/css-loader",
            },
          },
          "path": "node_modules/css-loader",
          "weight": 2435,
          "weightCompressor": undefined,
        },
      ],
      "label": "node_modules",
      "link": undefined,
      "path": "node_modules",
      "weight": 2905,
      "weightCompressor": undefined,
    },
    Object {
      "groups": Array [
        Object {
          "groups": Array [
            Object {
              "groups": Array [],
              "label": "chunk loaded",
              "link": Object {
                "id": "webpack/runtime/chunk loaded",
                "page": "module",
              },
              "path": "webpack/runtime/chunk loaded",
              "weight": 886,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "compat get default export",
              "link": Object {
                "id": "webpack/runtime/compat get default export",
                "page": "module",
              },
              "path": "webpack/runtime/compat get default export",
              "weight": 267,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "define property getters",
              "link": Object {
                "id": "webpack/runtime/define property getters",
                "page": "module",
              },
              "path": "webpack/runtime/define property getters",
              "weight": 308,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "ensure chunk",
              "link": Object {
                "id": "webpack/runtime/ensure chunk",
                "page": "module",
              },
              "path": "webpack/runtime/ensure chunk",
              "weight": 326,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "get javascript chunk filename",
              "link": Object {
                "id": "webpack/runtime/get javascript chunk filename",
                "page": "module",
              },
              "path": "webpack/runtime/get javascript chunk filename",
              "weight": 167,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "global",
              "link": Object {
                "id": "webpack/runtime/global",
                "page": "module",
              },
              "path": "webpack/runtime/global",
              "weight": 221,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "hasOwnProperty shorthand",
              "link": Object {
                "id": "webpack/runtime/hasOwnProperty shorthand",
                "page": "module",
              },
              "path": "webpack/runtime/hasOwnProperty shorthand",
              "weight": 88,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "jsonp chunk loading",
              "link": Object {
                "id": "webpack/runtime/jsonp chunk loading",
                "page": "module",
              },
              "path": "webpack/runtime/jsonp chunk loading",
              "weight": 3227,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "load script",
              "link": Object {
                "id": "webpack/runtime/load script",
                "page": "module",
              },
              "path": "webpack/runtime/load script",
              "weight": 1503,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "make namespace object",
              "link": Object {
                "id": "webpack/runtime/make namespace object",
                "page": "module",
              },
              "path": "webpack/runtime/make namespace object",
              "weight": 274,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "publicPath",
              "link": Object {
                "id": "webpack/runtime/publicPath",
                "page": "module",
              },
              "path": "webpack/runtime/publicPath",
              "weight": 867,
              "weightCompressor": undefined,
            },
          ],
          "label": "runtime",
          "link": undefined,
          "path": "webpack/runtime",
          "weight": 8134,
          "weightCompressor": undefined,
        },
      ],
      "label": "webpack",
      "link": undefined,
      "path": "webpack",
      "weight": 8134,
      "weightCompressor": undefined,
    },
  ],
  "label": "",
  "link": undefined,
  "path": "/",
  "weight": 21280.84,
  "weightCompressor": undefined,
}
`;

exports[`modulesToFoamTree 2`] = `
Object {
  "groups": Array [
    Object {
      "groups": Array [
        Object {
          "groups": Array [
            Object {
              "groups": Array [],
              "label": "index.ts",
              "link": Object {
                "id": "292",
                "page": "module",
              },
              "path": "simple/src/index.ts",
              "weight": 226,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "sub-module.ts",
              "link": Object {
                "id": "./node_modules/babel-loader/lib/index.js!./simple/src/sub-module.ts",
                "page": "module",
              },
              "path": "simple/src/sub-module.ts",
              "weight": 190,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "index2.ts",
              "link": Object {
                "id": "503",
                "page": "module",
              },
              "path": "simple/src/index2.ts",
              "weight": 552,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "index2.css",
              "link": Object {
                "id": "945",
                "page": "module",
              },
              "path": "simple/src/index2.css",
              "weight": 644,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "test.txt",
              "link": Object {
                "id": "47",
                "page": "module",
              },
              "path": "simple/src/test.txt",
              "weight": 42,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "dyn.ts",
              "link": Object {
                "id": "848",
                "page": "module",
              },
              "path": "simple/src/dyn.ts",
              "weight": 21,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "statoscope.png",
              "link": Object {
                "id": "523",
                "page": "module",
              },
              "path": "simple/src/statoscope.png",
              "weight": 8311.84,
              "weightCompressor": undefined,
            },
          ],
          "label": "src",
          "link": undefined,
          "path": "simple/src",
          "weight": 9986.84,
          "weightCompressor": undefined,
        },
        Object {
          "groups": Array [
            Object {
              "groups": Array [
                Object {
                  "groups": Array [],
                  "label": "index.js",
                  "link": Object {
                    "id": "./simple/node_modules/foo/index.js",
                    "page": "module",
                  },
                  "path": "simple/node_modules/foo/index.js",
                  "weight": 96,
                  "weightCompressor": undefined,
                },
                Object {
                  "groups": Array [
                    Object {
                      "groups": Array [
                        Object {
                          "groups": Array [],
                          "label": "index.js",
                          "link": Object {
                            "id": "./simple/node_modules/foo/node_modules/bar/index.js",
                            "page": "module",
                          },
                          "path": "simple/node_modules/foo/node_modules/bar/index.js",
                          "weight": 25,
                          "weightCompressor": undefined,
                        },
                      ],
                      "label": "bar",
                      "link": Object {
                        "id": "bar",
                        "package": Object {
                          "instance": Object {
                            "path": "simple/node_modules/foo/node_modules/bar",
                          },
                          "name": "bar",
                        },
                        "page": "package",
                        "params": Object {
                          "instance": "simple/node_modules/foo/node_modules/bar",
                        },
                      },
                      "path": "simple/node_modules/foo/node_modules/bar",
                      "weight": 25,
                      "weightCompressor": undefined,
                    },
                  ],
                  "label": "node_modules",
                  "link": undefined,
                  "path": "simple/node_modules/foo/node_modules",
                  "weight": 25,
                  "weightCompressor": undefined,
                },
              ],
              "label": "foo",
              "link": Object {
                "id": "foo",
                "package": Object {
                  "instance": Object {
                    "path": "simple/node_modules/foo",
                  },
                  "name": "foo",
                },
                "page": "package",
                "params": Object {
                  "instance": "simple/node_modules/foo",
                },
              },
              "path": "simple/node_modules/foo",
              "weight": 121,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [
                Object {
                  "groups": Array [],
                  "label": "index.js",
                  "link": Object {
                    "id": "./simple/node_modules/bar/index.js",
                    "page": "module",
                  },
                  "path": "simple/node_modules/bar/index.js",
                  "weight": 50,
                  "weightCompressor": undefined,
                },
              ],
              "label": "bar",
              "link": Object {
                "id": "bar",
                "package": Object {
                  "instance": Object {
                    "path": "simple/node_modules/bar",
                  },
                  "name": "bar",
                },
                "page": "package",
                "params": Object {
                  "instance": "simple/node_modules/bar",
                },
              },
              "path": "simple/node_modules/bar",
              "weight": 50,
              "weightCompressor": undefined,
            },
          ],
          "label": "node_modules",
          "link": undefined,
          "path": "simple/node_modules",
          "weight": 171,
          "weightCompressor": undefined,
        },
      ],
      "label": "simple",
      "link": undefined,
      "path": "simple",
      "weight": 10157.84,
      "weightCompressor": undefined,
    },
    Object {
      "groups": Array [],
      "label": "external \\"extLib\\"",
      "link": Object {
        "id": "external var \\"extLib\\"",
        "page": "module",
      },
      "path": "external \\"extLib\\"",
      "weight": 84,
      "weightCompressor": undefined,
    },
    Object {
      "groups": Array [
        Object {
          "groups": Array [
            Object {
              "groups": Array [],
              "label": "index.js",
              "link": Object {
                "id": "929",
                "page": "module",
              },
              "path": "node_modules/is-array/index.js",
              "weight": 470,
              "weightCompressor": undefined,
            },
          ],
          "label": "is-array",
          "link": Object {
            "id": "is-array",
            "package": Object {
              "instance": Object {
                "path": "node_modules/is-array",
              },
              "name": "is-array",
            },
            "page": "package",
            "params": Object {
              "instance": "node_modules/is-array",
            },
          },
          "path": "node_modules/is-array",
          "weight": 470,
          "weightCompressor": undefined,
        },
        Object {
          "groups": Array [
            Object {
              "groups": Array [
                Object {
                  "groups": Array [
                    Object {
                      "groups": Array [],
                      "label": "api.js",
                      "link": Object {
                        "id": "476",
                        "page": "module",
                      },
                      "path": "node_modules/css-loader/dist/runtime/api.js",
                      "weight": 1605,
                      "weightCompressor": undefined,
                    },
                    Object {
                      "groups": Array [],
                      "label": "getUrl.js",
                      "link": Object {
                        "id": "678",
                        "page": "module",
                      },
                      "path": "node_modules/css-loader/dist/runtime/getUrl.js",
                      "weight": 830,
                      "weightCompressor": undefined,
                    },
                  ],
                  "label": "runtime",
                  "link": undefined,
                  "path": "node_modules/css-loader/dist/runtime",
                  "weight": 2435,
                  "weightCompressor": undefined,
                },
              ],
              "label": "dist",
              "link": undefined,
              "path": "node_modules/css-loader/dist",
              "weight": 2435,
              "weightCompressor": undefined,
            },
          ],
          "label": "css-loader",
          "link": Object {
            "id": "css-loader",
            "package": Object {
              "instance": Object {
                "path": "node_modules/css-loader",
              },
              "name": "css-loader",
            },
            "page": "package",
            "params": Object {
              "instance": "node_modules/css-loader",
            },
          },
          "path": "node_modules/css-loader",
          "weight": 2435,
          "weightCompressor": undefined,
        },
      ],
      "label": "node_modules",
      "link": undefined,
      "path": "node_modules",
      "weight": 2905,
      "weightCompressor": undefined,
    },
    Object {
      "groups": Array [
        Object {
          "groups": Array [
            Object {
              "groups": Array [],
              "label": "chunk loaded",
              "link": Object {
                "id": "webpack/runtime/chunk loaded",
                "page": "module",
              },
              "path": "webpack/runtime/chunk loaded",
              "weight": 886,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "compat get default export",
              "link": Object {
                "id": "webpack/runtime/compat get default export",
                "page": "module",
              },
              "path": "webpack/runtime/compat get default export",
              "weight": 267,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "define property getters",
              "link": Object {
                "id": "webpack/runtime/define property getters",
                "page": "module",
              },
              "path": "webpack/runtime/define property getters",
              "weight": 308,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "ensure chunk",
              "link": Object {
                "id": "webpack/runtime/ensure chunk",
                "page": "module",
              },
              "path": "webpack/runtime/ensure chunk",
              "weight": 326,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "get javascript chunk filename",
              "link": Object {
                "id": "webpack/runtime/get javascript chunk filename",
                "page": "module",
              },
              "path": "webpack/runtime/get javascript chunk filename",
              "weight": 167,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "global",
              "link": Object {
                "id": "webpack/runtime/global",
                "page": "module",
              },
              "path": "webpack/runtime/global",
              "weight": 221,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "hasOwnProperty shorthand",
              "link": Object {
                "id": "webpack/runtime/hasOwnProperty shorthand",
                "page": "module",
              },
              "path": "webpack/runtime/hasOwnProperty shorthand",
              "weight": 88,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "jsonp chunk loading",
              "link": Object {
                "id": "webpack/runtime/jsonp chunk loading",
                "page": "module",
              },
              "path": "webpack/runtime/jsonp chunk loading",
              "weight": 3227,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "load script",
              "link": Object {
                "id": "webpack/runtime/load script",
                "page": "module",
              },
              "path": "webpack/runtime/load script",
              "weight": 1503,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "make namespace object",
              "link": Object {
                "id": "webpack/runtime/make namespace object",
                "page": "module",
              },
              "path": "webpack/runtime/make namespace object",
              "weight": 274,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "publicPath",
              "link": Object {
                "id": "webpack/runtime/publicPath",
                "page": "module",
              },
              "path": "webpack/runtime/publicPath",
              "weight": 867,
              "weightCompressor": undefined,
            },
          ],
          "label": "runtime",
          "link": undefined,
          "path": "webpack/runtime",
          "weight": 8134,
          "weightCompressor": undefined,
        },
      ],
      "label": "webpack",
      "link": undefined,
      "path": "webpack",
      "weight": 8134,
      "weightCompressor": undefined,
    },
  ],
  "label": "",
  "link": undefined,
  "path": "/",
  "weight": 21280.84,
  "weightCompressor": undefined,
}
`;

exports[`modulesToFoamTree 3`] = `
Object {
  "groups": Array [
    Object {
      "groups": Array [
        Object {
          "groups": Array [
            Object {
              "groups": Array [],
              "label": "index.ts",
              "link": Object {
                "id": "292",
                "page": "module",
              },
              "path": "simple/src/index.ts",
              "weight": 226,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "sub-module.ts",
              "link": Object {
                "id": "./node_modules/babel-loader/lib/index.js!./simple/src/sub-module.ts",
                "page": "module",
              },
              "path": "simple/src/sub-module.ts",
              "weight": 190,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "index2.ts",
              "link": Object {
                "id": "503",
                "page": "module",
              },
              "path": "simple/src/index2.ts",
              "weight": 552,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [],
              "label": "index2.css",
              "link": Object {
                "id": "945",
                "page": "module",
              },
              "path": "simple/src/index2.css",
              "weight": 438,
              "weightCompressor": "gzip",
            },
            Object {
              "groups": Array [],
              "label": "test.txt",
              "link": Object {
                "id": "47",
                "page": "module",
              },
              "path": "simple/src/test.txt",
              "weight": 99,
              "weightCompressor": "gzip",
            },
            Object {
              "groups": Array [],
              "label": "dyn.ts",
              "link": Object {
                "id": "848",
                "page": "module",
              },
              "path": "simple/src/dyn.ts",
              "weight": 160,
              "weightCompressor": "gzip",
            },
            Object {
              "groups": Array [],
              "label": "statoscope.png",
              "link": Object {
                "id": "523",
                "page": "module",
              },
              "path": "simple/src/statoscope.png",
              "weight": 6217,
              "weightCompressor": "gzip",
            },
          ],
          "label": "src",
          "link": undefined,
          "path": "simple/src",
          "weight": 7882,
          "weightCompressor": "multiple compressors",
        },
        Object {
          "groups": Array [
            Object {
              "groups": Array [
                Object {
                  "groups": Array [],
                  "label": "index.js",
                  "link": Object {
                    "id": "./simple/node_modules/foo/index.js",
                    "page": "module",
                  },
                  "path": "simple/node_modules/foo/index.js",
                  "weight": 96,
                  "weightCompressor": undefined,
                },
                Object {
                  "groups": Array [
                    Object {
                      "groups": Array [
                        Object {
                          "groups": Array [],
                          "label": "index.js",
                          "link": Object {
                            "id": "./simple/node_modules/foo/node_modules/bar/index.js",
                            "page": "module",
                          },
                          "path": "simple/node_modules/foo/node_modules/bar/index.js",
                          "weight": 25,
                          "weightCompressor": undefined,
                        },
                      ],
                      "label": "bar",
                      "link": Object {
                        "id": "bar",
                        "package": Object {
                          "instance": Object {
                            "path": "simple/node_modules/foo/node_modules/bar",
                          },
                          "name": "bar",
                        },
                        "page": "package",
                        "params": Object {
                          "instance": "simple/node_modules/foo/node_modules/bar",
                        },
                      },
                      "path": "simple/node_modules/foo/node_modules/bar",
                      "weight": 25,
                      "weightCompressor": undefined,
                    },
                  ],
                  "label": "node_modules",
                  "link": undefined,
                  "path": "simple/node_modules/foo/node_modules",
                  "weight": 25,
                  "weightCompressor": undefined,
                },
              ],
              "label": "foo",
              "link": Object {
                "id": "foo",
                "package": Object {
                  "instance": Object {
                    "path": "simple/node_modules/foo",
                  },
                  "name": "foo",
                },
                "page": "package",
                "params": Object {
                  "instance": "simple/node_modules/foo",
                },
              },
              "path": "simple/node_modules/foo",
              "weight": 121,
              "weightCompressor": undefined,
            },
            Object {
              "groups": Array [
                Object {
                  "groups": Array [],
                  "label": "index.js",
                  "link": Object {
                    "id": "./simple/node_modules/bar/index.js",
                    "page": "module",
                  },
                  "path": "simple/node_modules/bar/index.js",
                  "weight": 50,
                  "weightCompressor": undefined,
                },
              ],
              "label": "bar",
              "link": Object {
                "id": "bar",
                "package": Object {
                  "instance": Object {
                    "path": "simple/node_modules/bar",
                  },
                  "name": "bar",
                },
                "page": "package",
                "params": Object {
                  "instance": "simple/node_modules/bar",
                },
              },
              "path": "simple/node_modules/bar",
              "weight": 50,
              "weightCompressor": undefined,
            },
          ],
          "label": "node_modules",
          "link": undefined,
          "path": "simple/node_modules",
          "weight": 171,
          "weightCompressor": undefined,
        },
      ],
      "label": "simple",
      "link": undefined,
      "path": "simple",
      "weight": 8053,
      "weightCompressor": "multiple compressors",
    },
    Object {
      "groups": Array [],
      "label": "external \\"extLib\\"",
      "link": Object {
        "id": "external var \\"extLib\\"",
        "page": "module",
      },
      "path": "external \\"extLib\\"",
      "weight": 84,
      "weightCompressor": undefined,
    },
    Object {
      "groups": Array [
        Object {
          "groups": Array [
            Object {
              "groups": Array [],
              "label": "index.js",
              "link": Object {
                "id": "929",
                "page": "module",
              },
              "path": "node_modules/is-array/index.js",
              "weight": 268,
              "weightCompressor": "gzip",
            },
          ],
          "label": "is-array",
          "link": Object {
            "id": "is-array",
            "package": Object {
              "instance": Object {
                "path": "node_modules/is-array",
              },
              "name": "is-array",
            },
            "page": "package",
            "params": Object {
              "instance": "node_modules/is-array",
            },
          },
          "path": "node_modules/is-array",
          "weight": 268,
          "weightCompressor": "gzip",
        },
        Object {
          "groups": Array [
            Object {
              "groups": Array [
                Object {
                  "groups": Array [
                    Object {
                      "groups": Array [],
                      "label": "api.js",
                      "link": Object {
                        "id": "476",
                        "page": "module",
                      },
                      "path": "node_modules/css-loader/dist/runtime/api.js",
                      "weight": 662,
                      "weightCompressor": "gzip",
                    },
                    Object {
                      "groups": Array [],
                      "label": "getUrl.js",
                      "link": Object {
                        "id": "678",
                        "page": "module",
                      },
                      "path": "node_modules/css-loader/dist/runtime/getUrl.js",
                      "weight": 406,
                      "weightCompressor": "gzip",
                    },
                  ],
                  "label": "runtime",
                  "link": undefined,
                  "path": "node_modules/css-loader/dist/runtime",
                  "weight": 1068,
                  "weightCompressor": "gzip",
                },
              ],
              "label": "dist",
              "link": undefined,
              "path": "node_modules/css-loader/dist",
              "weight": 1068,
              "weightCompressor": "gzip",
            },
          ],
          "label": "css-loader",
          "link": Object {
            "id": "css-loader",
            "package": Object {
              "instance": Object {
                "path": "node_modules/css-loader",
              },
              "name": "css-loader",
            },
            "page": "package",
            "params": Object {
              "instance": "node_modules/css-loader",
            },
          },
          "path": "node_modules/css-loader",
          "weight": 1068,
          "weightCompressor": "gzip",
        },
      ],
      "label": "node_modules",
      "link": undefined,
      "path": "node_modules",
      "weight": 1336,
      "weightCompressor": "gzip",
    },
    Object {
      "groups": Array [
        Object {
          "groups": Array [
            Object {
              "groups": Array [],
              "label": "chunk loaded",
              "link": Object {
                "id": "webpack/runtime/chunk loaded",
                "page": "module",
              },
              "path": "webpack/runtime/chunk loaded",
              "weight": 407,
              "weightCompressor": "gzip",
            },
            Object {
              "groups": Array [],
              "label": "compat get default export",
              "link": Object {
                "id": "webpack/runtime/compat get default export",
                "page": "module",
              },
              "path": "webpack/runtime/compat get default export",
              "weight": 192,
              "weightCompressor": "gzip",
            },
            Object {
              "groups": Array [],
              "label": "define property getters",
              "link": Object {
                "id": "webpack/runtime/define property getters",
                "page": "module",
              },
              "path": "webpack/runtime/define property getters",
              "weight": 197,
              "weightCompressor": "gzip",
            },
            Object {
              "groups": Array [],
              "label": "ensure chunk",
              "link": Object {
                "id": "webpack/runtime/ensure chunk",
                "page": "module",
              },
              "path": "webpack/runtime/ensure chunk",
              "weight": 212,
              "weightCompressor": "gzip",
            },
            Object {
              "groups": Array [],
              "label": "get javascript chunk filename",
              "link": Object {
                "id": "webpack/runtime/get javascript chunk filename",
                "page": "module",
              },
              "path": "webpack/runtime/get javascript chunk filename",
              "weight": 154,
              "weightCompressor": "gzip",
            },
            Object {
              "groups": Array [],
              "label": "global",
              "link": Object {
                "id": "webpack/runtime/global",
                "page": "module",
              },
              "path": "webpack/runtime/global",
              "weight": 155,
              "weightCompressor": "gzip",
            },
            Object {
              "groups": Array [],
              "label": "hasOwnProperty shorthand",
              "link": Object {
                "id": "webpack/runtime/hasOwnProperty shorthand",
                "page": "module",
              },
              "path": "webpack/runtime/hasOwnProperty shorthand",
              "weight": 97,
              "weightCompressor": "gzip",
            },
            Object {
              "groups": Array [],
              "label": "jsonp chunk loading",
              "link": Object {
                "id": "webpack/runtime/jsonp chunk loading",
                "page": "module",
              },
              "path": "webpack/runtime/jsonp chunk loading",
              "weight": 1124,
              "weightCompressor": "gzip",
            },
            Object {
              "groups": Array [],
              "label": "load script",
              "link": Object {
                "id": "webpack/runtime/load script",
                "page": "module",
              },
              "path": "webpack/runtime/load script",
              "weight": 683,
              "weightCompressor": "gzip",
            },
            Object {
              "groups": Array [],
              "label": "make namespace object",
              "link": Object {
                "id": "webpack/runtime/make namespace object",
                "page": "module",
              },
              "path": "webpack/runtime/make namespace object",
              "weight": 186,
              "weightCompressor": "gzip",
            },
            Object {
              "groups": Array [],
              "label": "publicPath",
              "link": Object {
                "id": "webpack/runtime/publicPath",
                "page": "module",
              },
              "path": "webpack/runtime/publicPath",
              "weight": 432,
              "weightCompressor": "gzip",
            },
          ],
          "label": "runtime",
          "link": undefined,
          "path": "webpack/runtime",
          "weight": 3839,
          "weightCompressor": "gzip",
        },
      ],
      "label": "webpack",
      "link": undefined,
      "path": "webpack",
      "weight": 3839,
      "weightCompressor": "gzip",
    },
  ],
  "label": "",
  "link": undefined,
  "path": "/",
  "weight": 13312,
  "weightCompressor": "multiple compressors",
}
`;

exports[`validation validation_getItem 1`] = `
Object {
  "details": Array [
    Object {
      "payload": Object {
        "context": Object {
          "compilation": "c6133ad65823403ee6df",
          "module": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts|0b0c5dd45d404db9de8e4f112da38650",
        },
      },
      "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
      "type": "discovery",
    },
  ],
  "id": 0,
  "message": "Module ./simple/src/index.ts + 3 modules should not be used",
  "related": Array [
    Object {
      "id": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts|0b0c5dd45d404db9de8e4f112da38650",
      "type": "module",
    },
  ],
  "rule": "webpack/restricted-modules",
  "type": "error",
}
`;

exports[`validation validation_getItems 1`] = `
Array [
  Object {
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "compilation": "c6133ad65823403ee6df",
            "module": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts|0b0c5dd45d404db9de8e4f112da38650",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 0,
    "message": "Module ./simple/src/index.ts + 3 modules should not be used",
    "related": Array [
      Object {
        "id": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts|0b0c5dd45d404db9de8e4f112da38650",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  Object {
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "compilation": "c6133ad65823403ee6df",
            "module": "./node_modules/babel-loader/lib/index.js!./simple/src/index2.ts|c68ca0e747ab40a1e23e6b9e5f0d6325",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 1,
    "message": "Module ./simple/src/index2.ts + 1 modules should not be used",
    "related": Array [
      Object {
        "id": "./node_modules/babel-loader/lib/index.js!./simple/src/index2.ts|c68ca0e747ab40a1e23e6b9e5f0d6325",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  Object {
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "compilation": "c6133ad65823403ee6df",
            "module": "./node_modules/babel-loader/lib/index.js!./simple/src/sub-module.ts",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 2,
    "message": "Module ./simple/src/sub-module.ts should not be used",
    "related": Array [
      Object {
        "id": "./node_modules/babel-loader/lib/index.js!./simple/src/sub-module.ts",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  Object {
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "compilation": "c6133ad65823403ee6df",
            "module": "./node_modules/css-loader/dist/cjs.js!./simple/src/index2.css",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 3,
    "message": "Module ./simple/src/index2.css should not be used",
    "related": Array [
      Object {
        "id": "./node_modules/css-loader/dist/cjs.js!./simple/src/index2.css",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  Object {
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "compilation": "c6133ad65823403ee6df",
            "module": "asset/resource|./simple/src/test.txt",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 4,
    "message": "Module ./simple/src/test.txt should not be used",
    "related": Array [
      Object {
        "id": "asset/resource|./simple/src/test.txt",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  Object {
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "compilation": "c6133ad65823403ee6df",
            "module": "./node_modules/babel-loader/lib/index.js!./simple/src/dyn.ts",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 5,
    "message": "Module ./simple/src/dyn.ts should not be used",
    "related": Array [
      Object {
        "id": "./node_modules/babel-loader/lib/index.js!./simple/src/dyn.ts",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  Object {
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "compilation": "c6133ad65823403ee6df",
            "module": "asset/inline|./simple/src/statoscope.png",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 6,
    "message": "Module ./simple/src/statoscope.png should not be used",
    "related": Array [
      Object {
        "id": "asset/inline|./simple/src/statoscope.png",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  Object {
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "compilation": "c6133ad65823403ee6df",
            "module": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 7,
    "message": "Module ./simple/src/index.ts should not be used",
    "related": Array [
      Object {
        "id": "./node_modules/babel-loader/lib/index.js!./simple/src/index.ts",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
  Object {
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "compilation": "c6133ad65823403ee6df",
            "module": "./node_modules/babel-loader/lib/index.js!./simple/src/index2.ts",
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              module: #.module.resolveModule(#.compilation),
            }
            ",
        "type": "discovery",
      },
    ],
    "id": 8,
    "message": "Module ./simple/src/index2.ts should not be used",
    "related": Array [
      Object {
        "id": "./node_modules/babel-loader/lib/index.js!./simple/src/index2.ts",
        "type": "module",
      },
    ],
    "rule": "webpack/restricted-modules",
    "type": "error",
  },
]
`;

exports[`validation validation_getItems 2`] = `Array []`;

exports[`validation validation_resolveRule 1`] = `
Object {
  "description": "Ensures that bundle doesn't use specified modules",
  "package": Object {
    "author": Object {
      "name": "Sergey Melyukov",
      "url": "https://twitter.com/smelukov",
    },
    "description": "Plugin for @statoscope/stats-validator to validate webpack stats",
    "homepage": "https://github.com/statoscope/statoscope/",
    "name": "@statoscope/stats-validator-plugin-webpack",
    "version": "5.22.1-alpha.0",
  },
}
`;
